[project]
name = "tutti"
version = "1.0.0"
description = "Distributed Synchronization Primitives"
authors = [{ name = "Hamilton Kibbe", email = "ham@hamiltonkib.be" }, { name = "Tylor Dodge", email = "tylor.dodge1@gmail.com" }]
requires-python = "~=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "redis>=4.2,<5",
]

[project.optional-dependencies]
asyncio = []

[dependency-groups]
dev = [
    "pytest~=8.3",
    "mypy>=0.910,<0.911",
    "types-redis>=4.2,<5",
    "Sphinx>=4.2.0,<5",
    "sphinx-autobuild>=2021.3.14,<2022",
    "pytest-asyncio>=0.25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = "tutti,tests"
